Worked on authentication api

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 MONGO_URI = 'mongodb+srv://sidd84755:Siddharth25@cluster0.ffib5.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+JWT_SECRET = 'secret#text'
+NODE_ENV = 'development'
