Worked on integration of SMTP within the app

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,8 @@
 MONGO_URI = 'mongodb+srv://sidd84755:Siddharth25@cluster0.ffib5.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
 JWT_SECRET = 'secret#text'
 NODE_ENV = 'development'
+
+SMTP_USER = '88dc80001@smtp-brevo.com'
+SMTP_PASS = 'WInNC8PFaDHt1TOA'
+
+SENDER_EMAIL = 'sidd84755@gmail.com'
